tests/baselines/reference/classStaticBlock7.errors.txt
error TS2318: Cannot find global type 'IterableIterator'.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts(3,9): error TS18037: Await expression cannot be used inside class static block.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts(4,9): error TS1163: A 'yield' expression is only allowed in a generator body.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts(5,9): error TS1108: A 'return' statement can only be used within a function body.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts(5,9): error TS18041: A 'return' statement cannot be used inside class static block.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts(12,13): error TS18037: Await expression cannot be used inside class static block.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts(14,28): error TS1251: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'. Class definitions are automatically in strict mode.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts(24,13): error TS1163: A 'yield' expression is only allowed in a generator body.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts(26,24): error TS1251: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'. Class definitions are automatically in strict mode.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts(36,13): error TS18041: A 'return' statement cannot be used inside class static block.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts(38,22): error TS1251: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'. Class definitions are automatically in strict mode.


!!! error TS2318: Cannot find global type 'IterableIterator'.
==== tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts (10 errors) ====
    class C {
        static {
            await 1;
            ~~~~~~~
!!! error TS18037: Await expression cannot be used inside class static block.
            yield 1;
            ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
            return 1;
            ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.
            ~~~~~~
!!! error TS18041: A 'return' statement cannot be used inside class static block.
        }
    }
    
    async function f1 () {
        class C {
            static {
                await 1;
                ~~~~~~~
!!! error TS18037: Await expression cannot be used inside class static block.
    
                async function ff () {
                               ~~
!!! error TS1251: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'. Class definitions are automatically in strict mode.
                    await 1;
                }
            }
        }
    }
    
    function * f2 () {
        class C {
            static {
                yield 1;
                ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
    
                function * ff () {
                           ~~
!!! error TS1251: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'. Class definitions are automatically in strict mode.
                    yield 1;
                }
            }
        }
    }
    
    function f3 () {
        class C {
            static {
                return 1;
                ~~~~~~
!!! error TS18041: A 'return' statement cannot be used inside class static block.
    
                function ff () {
                         ~~
!!! error TS1251: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'. Class definitions are automatically in strict mode.
                    return 1
                }
            }
        }
    }
    